# bamcmc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  full_checks.md  pyproject.toml
.github/workflows/: ci.yml
bamcmc/: __init__.py  batch_specs.py  benchmark.py  error_handling.py  jax_config.py  mcmc_backend.py  registry.py  reset_utils.py  settings.py  test_nested_rhat.py  unit_tests.py
bamcmc/proposals/: dispatch.py
docs/: README.md  architecture.md  block_spec.md  checkpoint_helpers.md  configuration.md  development.md  log_posterior.md  proposals.md  registration.md  samplers.md  settings.md  tempering.md  troubleshooting.md
docs/examples/: linear_gaussian.md  ncp_hierarchical.md
posterior_benchmarks/: benchmark_67906c6fcd609f44.json  benchmark_915c4e7beed71bb9.json
src/bamcmc/: __init__.py  batch_specs.py  checkpoint_helpers.py  checkpoint_io.py  error_handling.py  hardware_info.py  history_processing.py  jax_config.py  mcmc_backend.py  mcmc_compile.py  mcmc_config.py  mcmc_diagnostics.py  mcmc_sampling.py  mcmc_scan.py  mcmc_types.py  mcmc_utils.py  output_management.py  posterior_benchmark.py  posterior_hash.py  prior_config.py  registry.py  reset_utils.py  run_tests.py  sampling_nested_demo.py  settings.py  test_posteriors.py  unit_tests.py
src/bamcmc/mcmc/: __init__.py  backend.py  compile.py  config.py  diagnostics.py  sampling.py  (+5 more)
tests/: __init__.py  conftest.py  test_benchmark_hash.py  test_checkpoints.py  test_config.py  test_integration.py  test_nested_rhat.py  test_proposals.py  test_reset_utils.py  test_tempering_sampling.py  test_unit.py
(+17 files in other folders)
