[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bamcmc"
version = "0.1.0"
description = "Bayesian MCMC sampling with coupled A/B chains and nested R-hat diagnostics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Benjamin Monroe"}
]
dependencies = [
    "numpy>=1.20",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bamcmc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
